提取静态变量，优化代码